# Project-Natural-Language

./: .gitignore  CMakeLists.txt
dependency/: CMakeLists.txt  README.md
dependency/antlr4/include/: ANTLRErrorListener.h  ANTLRFileStream.h  ANTLRInputStream.h  BaseErrorListener.h  BufferedTokenStream.h  CommonToken.h  CommonTokenFactory.h  CommonTokenStream.h  ConsoleErrorListener.h  DefaultErrorStrategy.h  DiagnosticErrorListener.h  FailedPredicateException.h  IntStream.h  InterpreterRuleContext.h  Lexer.h  LexerNoViableAltException.h  ListTokenSource.h  Parser.h  ParserInterpreter.h  ParserRuleContext.h  ProxyErrorListener.h  RecognitionException.h  Recognizer.h  RuleContext.h  RuleContextWithAltNum.h  Token.h  TokenFactory.h  TokenSource.h  TokenStreamRewriter.h  UnbufferedCharStream.h  UnbufferedTokenStream.h  Vocabulary.h
dependency/antlr4/include/atn/: ATN.h  ATNConfig.h  ATNConfigSet.h  ATNDeserializer.h  ATNState.h  ATNStateType.h  ActionTransition.h  AmbiguityInfo.h  ArrayPredictionContext.h  AtomTransition.h  ContextSensitivityInfo.h  DecisionEventInfo.h  DecisionInfo.h  EpsilonTransition.h  ErrorInfo.h  HashUtils.h  LL1Analyzer.h  LexerATNConfig.h  LexerATNSimulator.h  LexerAction.h  LexerActionExecutor.h  LexerActionType.h  LexerChannelAction.h  LexerCustomAction.h  LexerIndexedCustomAction.h  LexerModeAction.h  LexerMoreAction.h  LexerPopModeAction.h  LexerPushModeAction.h  LexerSkipAction.h  LexerTypeAction.h  LookaheadEventInfo.h  NotSetTransition.h  OrderedATNConfigSet.h  ParseInfo.h  ParserATNSimulator.h  PrecedencePredicateTransition.h  PredicateEvalInfo.h  PredicateTransition.h  PredictionContext.h  (+16 more)
dependency/antlr4/include/dfa/: DFA.h  DFAState.h
dependency/antlr4/include/misc/: Interval.h  IntervalSet.h  MurmurHash.h
dependency/antlr4/include/support/: BitSet.h  CPPUtils.h  Utf8.h
dependency/antlr4/include/tree/: AbstractParseTreeVisitor.h  ParseTreeType.h  Trees.h
dependency/antlr4/include/tree/pattern/: RuleTagToken.h
dependency/antlr4/include/tree/xpath/: XPathLexer.h  XPathLexerErrorListener.h  XPathRuleElement.h  XPathTokenElement.h
dependency/libiconv/include/: iconv.h
include/: project-nl.h
res/grammar/: LTShell.g4  LangTexLexer.g4  LangTexParser.g4
src/pnl/ll/: CMakeLists.txt
src/pnl/ll/builtins/: CMakeLists.txt
src/pnl/ll/builtins/anonymous_core/: core.cpp  core.def
src/pnl/ll/builtins/core/: core.cpp  core.def  core.nlsm
src/pnl/ll/builtins/io/: io.cpp  io.def  io.nlsm
src/pnl/ll/builtins/win32/: win32.cpp  win32.def  win32.nlsm
src/pnl/ll/lib/: base.cpp  base.cppm  collections.cpp  collections.cppm  comtime.cpp  comtime.cppm  meta_prog.cppm  pnl.ll.cppm  runtime.cpp  runtime.cppm  runtime.load.cpp  serialize.cppm  string.cpp  string.cppm
src/pnl/ll/lib/dep/: dlfcn.c
src/pnl/ll/nlim/: nlim.cpp
src/pnl/ll/nlsm/entry/: grammar.cpp  grammar.cppm  nlsm.cpp
src/pnl/ll/nlsm/grammar/: nlsm.g4  opcode.g4
src/pnl/ll/nlvm/: nlvm.cpp
src/pnl/ll/nlvm/common/: nlvm-common.cpp  nlvm-common.cppm
src/pnl/ll/nlvm/win32/: CMakeLists.txt  nlvm.cpp  nlvmw.cpp
src/pnl/lo/: CMakeLists.txt
